2010-02-01	Chris Johns <chrisj@rtems.org>

	* libmisc/shell/fts.c: Updated to the latest NetBSD version to
	resolve heap allocation bugs.
	* libmisc/shell/main_ls.c, libmisc/shell/print-ls.c: Fix printing
	size bugs.
	* libnetworking/rtems/mkrootfs.c: Fix byte order bug when creating
	the loopback interface address.
	
2010-01-28	Sebastian Huber <sebastian.huber@embedded-brains.de>
	* libblock/src/bdbuf.c: Fixed invalid chain extract.

2010-01-26	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/include/rtems/bdbuf.h: Documentation.  New states
	RTEMS_BDBUF_STATE_ACCESS_PURGED and RTEMS_BDBUF_STATE_TRANSFER_PURGED.
	Declare rtems_bdbuf_purge_dev() and rtems_bdbuf_purge_major().
	* libblock/src/bdbuf.c: Implemented ability to purge buffers from the
	cache depending on the device identifier or major number.  See test
	"libtests/block10".

2010-01-26	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/src/userextaddapiset.c: Removed file.
	* score/Makefile.am: Update for removed file.
	* sapi/include/rtems/extension.h, sapi/src/extensioncreate.c,
	score/include/rtems/score/userext.h: The function
	_User_extensions_Add_API_set is now inline.  Added const qualifier to
	extension table parameter in extension create and set functions.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 30
	* libmisc/shell/hexdump-parse.c:

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 1
	* libmisc/shell/fts.c:

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 7
	Coverity Id 8
	* libblock/src/bdpart.c: Verify libblock is really set after
	rtems_bdbuf_read() before using it.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 5
	* score/src/objectextendinformation.c: Check object_blocks for NULL to
	determine when to allocate object block table.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 27
	* libmisc/fsmount/fsmount.c: Ensure calloc() returns memory and then we