@@ -30,6 +30,7 @@ int unlink(
   rtems_filesystem_location_info_t  loc;
   int                               i;
   int                               result;
+  bool                              free_parentloc = false;
 
   /*
    * Get the node to be unlinked. Find the parent path first.
@@ -46,6 +47,8 @@ int unlink(
                                              false );
     if ( result != 0 )
       return -1;
+
+    free_parentloc = true;
   }
 
   /*
@@ -59,32 +62,37 @@ int unlink(
   result = rtems_filesystem_evaluate_relative_path( name , strlen( name ),
                                                     0, &loc, false );
   if ( result != 0 ) {
-    rtems_filesystem_freenode( &parentloc );
+    if ( free_parentloc )
+      rtems_filesystem_freenode( &parentloc );
     return -1;
   }
 
   if ( !loc.ops->node_type_h ) {
     rtems_filesystem_freenode( &loc );
-    rtems_filesystem_freenode( &parentloc );
+    if ( free_parentloc )
+      rtems_filesystem_freenode( &parentloc );
     rtems_set_errno_and_return_minus_one( ENOTSUP );
   }
 
   if (  (*loc.ops->node_type_h)( &loc ) == RTEMS_FILESYSTEM_DIRECTORY ) {
     rtems_filesystem_freenode( &loc );
-    rtems_filesystem_freenode( &parentloc );
+    if ( free_parentloc )
+      rtems_filesystem_freenode( &parentloc );
     rtems_set_errno_and_return_minus_one( EISDIR );
   }
 
   if ( !loc.ops->unlink_h ) {
     rtems_filesystem_freenode( &loc );
-    rtems_filesystem_freenode( &parentloc );
+    if ( free_parentloc )
+      rtems_filesystem_freenode( &parentloc );
     rtems_set_errno_and_return_minus_one( ENOTSUP );
   }
 
   result = (*loc.ops->unlink_h)( &parentloc, &loc );
 
   rtems_filesystem_freenode( &loc );
-  rtems_filesystem_freenode( &parentloc );
+  if ( free_parentloc )
+    rtems_filesystem_freenode( &parentloc );
 
   return result;
 }
