@@ -1,3 +1,12 @@
+2010-02-16	Chris Johns <chrisj@rtems.org>
+
+	* libcsupport/src/open.c: Tighten the open handler check.
+
+2010-02-16	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* libcsupport/src/rmdir.c, libcsupport/src/unlink.c: Free the
+	allocated pathloc.
+	
 2010-02-01	Chris Johns <chrisj@rtems.org>
 
 	* libmisc/shell/fts.c: Updated to the latest NetBSD version to
